Dist bower release

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "overthrow",
+  "name": "overthrow-js",
   "version": "0.7.0",
   "main": "dist/overthrow.js",
   "sidescroller": "dist/overthrow.sidescroller.js",
